--- a/html/css/style.css
+++ b/html/css/style.css
@@ -704,7 +704,9 @@ h2 {
 	     font-size: 2rem ;
      }
 
-   
+     .logo{
+        width: 180px;
+    }
      
     .spacing {margin-top: .5rem ;}
     .row {
