--- a/html/css/style.css
+++ b/html/css/style.css
@@ -720,6 +720,9 @@ h2 {
     .hide-mobile {
         display: none ;
     }
+    .container {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 639px) {
