--- a/html/css/style.css
+++ b/html/css/style.css
@@ -115,6 +115,7 @@ h1 {
 body {
     display: flex;
     min-height:100vh;
+    width: 100vw;
     overflow-x: hidden;
     background-color: var(--ofm-bg);
 
