--- a/css/style.css
+++ b/css/style.css
@@ -116,14 +116,13 @@ h1 {
 
 
 body {
-    display: flex;
-    min-height:100vh;
+    max-height:100vh;
     width: 100vw;
     overflow-x: hidden;
     background-color: var(--ofm-bg);
     margin: 0 ;
+    max-width:100%;  /* added */
 }
-
 
 
 main {
@@ -136,6 +135,7 @@ main {
 .body-contents{
     padding-left: 10vw ;
     padding-right: 10vw ;
+    width: 100vw ;
     max-width: 100% ;
 }
 
@@ -242,7 +242,8 @@ margin-right: auto ;}
   color: var(--ofm-bg-dark);
   opacity: 1;
   margin-top: 4rem;
-  margin-bottom: 4rem; 
+  margin-bottom: 4rem;
+  width: 60% ;
   max-width: 60% ;
   margin-left: auto ;
   margin-right: auto ;
@@ -252,7 +253,8 @@ margin-right: auto ;}
 	margin:0px;
 	background-color: var(--ofm-bg-dark);
 	color: var(--ofm-bg);
-    width: 100% ;
+    width: 100vw ;
+    max-width: 100% ;
 }
 
 .wrapper-navbar * {
@@ -330,6 +332,7 @@ div#navbarSupportedContent div#navbar_right_spacer {
 }
 
 .facsimiles {
+    width: 100vw ;
     padding-left: 0!important ; 
     padding-right: 0!important ;
     max-width: 100%;
@@ -447,6 +450,7 @@ div#navbarSupportedContent div#navbar_right_spacer {
 }
 .flex-grow-1.flex-shrink-1.bg {
     min-height: 5vh;
+    width: 100vw ;
     max-width: 100%;
     z-index: 10!important ;
 }
@@ -454,6 +458,7 @@ div#navbarSupportedContent div#navbar_right_spacer {
 .row.banner {
 	background: url('../images/cover.jpg') no-repeat;
 	min-height: 17vh;
+    width: 100vw ;
 	max-width: 100%;
 	margin: 0;
 }
@@ -480,6 +485,10 @@ div#navbarSupportedContent div#navbar_right_spacer {
 
 .container-fluid {
     padding: 0rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    width: 100vw ;
+    max-width: 100%
 }
 
 .navbar-brand {
@@ -588,7 +597,8 @@ min-width: unset ;
     padding-top: 0 ;
 }
 
-.footer {width: 100% ;}
+.footer {width: 100vw ;
+max-width: 100% ;}
 #footer-full-content {
     padding-top: 2em;
     padding-left: 0;
@@ -638,11 +648,12 @@ footer * {
 
 .footer-imprint-bar {
     text-align:center;
-    padding:0 0.4rem 0 0;
+    padding:0 0 0 0;
     font-size: 0.8rem;
     background-color: var(--ofm-table-bg-type);
 	color: var(--ofm-font-color);
-    width: 100% ;
+    width: 100vw ;
+    max-width: 100% ;
 }
 
 .footer-imprint-bar * {
@@ -719,6 +730,7 @@ h2 {
 @media screen and (max-width: 1015px) {
 	.flex-grow-1.flex-shrink-1.bg {
     		min-height: 5vh;
+            width: 100vw ;
             max-width: 100%;
 	}
 
@@ -740,7 +752,8 @@ h2 {
         display: none ;
     }
     .container {
-        width: 100%;
+        width: 100vw ;
+        max-width: 100% ;
     }
 }
 
@@ -817,12 +830,12 @@ h2 {
         max-width: unset ;
     }
     .column-left {
-        max-width: unset ;
-        width: 100%;
+        width: 100vw ;
+        max-width: 100%;
     }
 
     .button.column-right, .button.column-left{
-        width: 50% ;
+        width: 50vw ;
         max-width: 50% ;
     }
     .dropdown-item{
