padding left right navbar

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -764,6 +764,11 @@ h2 {
         text-align: center ;
         justify-content: center;
     }
+
+    .navbar{
+        padding-left: 0.5rem;
+        padding-right: 0.5rem ;
+    }
 }
 
 @media screen and (max-width: 639px) {
