--- a/html/css/style.css
+++ b/html/css/style.css
@@ -741,17 +741,19 @@ h2 {
     max-height: 80% ;
 }
 .pb {
-    display: block;
-    height: 1px; /* Ensure they have some height */
+    min-height: 1px; /* Ensure they have some height */
     background: transparent; /* Ensure they are not hidden */
-    padding-top: 1000px ;
+    margin-top: 20rem ;
   }
+
 
 #transcript{
     width: 200px ;
     max-height: 100% ;
     overflow-y: auto ; 
     color: #000 ;
+    display: none ;
+    
 }
 
 #transcript * {
