--- a/css/style.css
+++ b/css/style.css
@@ -752,7 +752,7 @@ h2 {
     max-height: 100% ;
     overflow-y: auto ; 
     color: #000 ;
-    display: none ;
+    display: none ;   /*  Hides transcription */
     
 }
 
