--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,15 @@ h1 {
 
 }
 
+
+.initiale_fleuro_lombarde, .initiale_lombarde, .initiale_cadelle  {
+    font-size: 3rem; 
+}
+
+.rubrik2, .rubrik {
+    color: red!important;
+}
+
 #myTable {
     display: none  ;
     }
@@ -142,6 +151,9 @@ h1 {
   pointer-events:auto;   /* allow mouseenter/mouseleave */
   border:2px solid transparent;
 }
+.image-region.highlight {                                                                                                   
+  border: 3px solid black;                                                                                                  
+}      
 
 /* ─── Hover / focus effect ───────────────────────── */
 .highlight {
@@ -788,7 +800,7 @@ h2 {
 }
 
 #transcript * {
-    color: #000!important ;
+    color: #000;
 }
 
 #img-resize{
@@ -810,7 +822,6 @@ h2 {
     padding-right: 0 ;
 	padding-bottom: 0 ;
     overflow-x: hidden ;
-    color: #fff;
 }
 
 
